# oxy-amazon-scraper

./: pyproject.toml
src/amazon_scraper/: scraper.py
