[project]
name = "amazon-scraper"
description = "A tool for scraping Amazon."
packages = [
    { include = "amazon_scraper", from = "src" },
]
authors = [{name = "Ignas Šimkūnas", email = "ignassimkunas@gmail.com"}, {name = "Teo", email = "teocns@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.11"

dependencies = [
    "pydantic>=2.7.4",
    "click>=8.1.7",
    "pandas>=2.2.2",
    "selenium>=4.22.0",
    "webdriver-manager>=4.0.1",
    "pydantic-settings>=2.3.4",
    "selenium-wire>=5.1.0",
    "blinker<1.8.0"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/amazon_scraper"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = "."
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_incomplete_defs = true

[tool.isort]
py_version = 311
combine_as_imports = true
profile = "black"
lines_between_types = 1
lines_after_imports = 2


[tool.hatch.version]
source = "vcs"
